--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   
   body {
     font-family: "lato", sans-serif;
-    color: white;
+    color: rgb(0, 0, 0);
   }
   
   /* Hacer todo el texto de los links negro y sin decoración*/
@@ -101,4 +101,67 @@
   .navbar a:hover {
     color: #9867C5;
     border-bottom: 3px solid #9867C5;
+  }
+
+  .showcase {
+    height: 300px;
+    background-color: purple;
+  }
+
+  /* Añade margen bajo el texto */
+.showcase p {
+    margin-bottom: 30px;
+  }
+  
+  /* Añade una sombra bajo la imágen */
+  .showcase img {
+    box-shadow: 7px 7px 7px rgba(0, 0, 0, 0.2);
+  }
+  
+  /* Añade algo de padding al contenido del formulario */
+  .showcase-form {
+    padding-left: 7px;
+  }
+
+  .grid {
+    overflow: visible;
+    display: grid;
+    grid-template-columns: 60% 40%;
+  }
+
+  .grid-item-1,
+.grid-item-2 {
+  position: relative;
+  top: 50px;
+}
+
+.showcase input[type='email'] {
+    padding: 10px 70px 10px 0;
+    font-size: 14px;
+    border: none;
+    border-radius: 6px;
+    padding-left: 6px;
+  }
+  
+  .btn {
+    border-radius: 6px;
+    padding: 12px 20px;
+    background: #9867C5;
+    border: none;
+    margin-left: 10px;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+  }
+
+  .showcase-form {
+    margin: auto;
+  }
+  
+  /* Change typeface and its size */
+  .little-info {
+    font-size: 15px;
+    font-family: "poppins", sans-serif;
+  
   }
