--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   
   body {
     font-family: "lato", sans-serif;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
   }
   
   /* Hacer todo el texto de los links negro y sin decoración*/
@@ -65,7 +65,7 @@
 /* Aplica el color de fondo, altura y "padding"*/
 
 .navbar {
-    background-color: purple;
+    background-color: rgb(44, 73, 168);
     height: 70px;
     padding: 0 30px;
   }
@@ -99,13 +99,13 @@
   }
   
   .navbar a:hover {
-    color: #9867C5;
-    border-bottom: 3px solid #9867C5;
+    color:rgb(44, 73, 168);
+    border-bottom: 3px solid rgb(44, 73, 168);
   }
 
   .showcase {
     height: 300px;
-    background-color: purple;
+    background-color: rgb(44, 73, 168);
   }
 
   /* Añade margen bajo el texto */
@@ -146,7 +146,7 @@
   .btn {
     border-radius: 6px;
     padding: 12px 20px;
-    background: #9867C5;
+    background: rgb(44, 73, 168);
     border: none;
     margin-left: 10px;
     color: white;
@@ -165,3 +165,100 @@
     font-family: "poppins", sans-serif;
   
   }
+
+  /* Centra el conetenedor, aplica un ancho máximo*/
+.lower-container {
+    margin: 120px auto;
+    padding: 0;
+    max-width: 1400px;
+  }
+  
+  
+  /* Apunta a todos los elementos h3 con clase CSS title */
+  .title {
+    color: black;
+    font-size: 20px;
+    text-align: left;
+    padding-left: 10px;
+    padding-top: 10px;
+  }
+  
+  /* Apunta a todos los parrafos con la clase CSS text */
+  .text {
+    color: black;
+    font-size: 19px;
+    width: 100%;
+    padding: 10px;
+    margin: 0, 20px;
+    text-align: justify;
+  }
+  /* Mostrar horizontalmente, poner un poco de espacio alrededor */
+.flex {
+    display: flex;
+    justify-content: space-around;
+  }
+  
+  /* Agregar algo de padding alrededor del contenedor. Alinear el texto al centro */
+  .stats {
+    padding: 45px 50px;
+    text-align: center;
+  }
+  
+  /* Aplicar margen y ancho */
+  .stat {
+    margin: 0 30px;
+    text-align: center;
+    width: 800px;
+  }
+
+  .stats .fa {
+    color:rgb(44, 73, 168);
+  }
+
+  .testimonial {
+    color: black;
+    padding: 40px;
+  }
+
+  /* Envuelve la imagen dentro de una figura circular y define su altura para que tome todo el alto de su elemento padre */
+
+.testimonial img {
+    height: 100%;
+    clip-path: circle();
+}
+
+/* Alinea el texto al centro */
+
+.testimonial h3{
+  text-align: center;
+}
+/* Crear un grid de tres columnas equidistantes. Definir un espaciado de 40px entre ellas */
+
+.grid-3 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 40px;
+  }
+  
+  
+  /* Crear una tarjeta en blanco con sombreado alrededor */
+  .card {
+    padding: 10px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: -7px -7px 20px rgba(0, 0, 0, 0.2),
+                 7px  7px 20px rgba(0, 0, 0, 0.2)
+  }
+
+  .circle {
+    background-color: transparent;
+    border:3px solid purple;
+    height:90px;
+    position: relative;
+    top: -30px;
+    left: 120px;
+    border-radius:50%;
+    -moz-border-radius:50%;
+    -webkit-border-radius:50%;
+    width:90px;
+}
