--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@
 
   .circle {
     background-color: transparent;
-    border:3px solid purple;
+    border:3px solid rgb(44, 73, 168);
     height:90px;
     position: relative;
     top: -30px;
@@ -262,3 +262,22 @@
     -webkit-border-radius:50%;
     width:90px;
 }
+
+/* Add padding around the footer as well */
+
+footer {
+    background-color:rgb(44, 73, 168);
+    padding: 20px 10px;
+  }
+  
+  /* Sets all link texts to white and puts margin to the left and right */
+  
+  footer a {
+    color: white;
+    margin: 0 10px;
+  }
+
+  footer a:hover {
+    color:rgb(44, 73, 168);
+    border-bottom: 2px solid rgb(44, 73, 168);
+  }
